; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet/extr_tcp_input.c_tcp_mssopt.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet/extr_tcp_input.c_tcp_mssopt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in_conninfo = type { i32 }

@.str = private unnamed_addr constant [41 x i8] c"tcp_mssopt with NULL in_conninfo pointer\00", align 1
@INC_ISIPV6 = common dso_local global i32 0, align 4
@V_tcp_mssdflt = common dso_local global i32 0, align 4
@V_tcp_v6mssdflt = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tcp_mssopt(%struct.in_conninfo* %0) #0 {
  %2 = alloca %struct.in_conninfo*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.in_conninfo* %0, %struct.in_conninfo** %2, align 8
  store i32 0, i32* %3, align 4
  store i64 0, i64* %4, align 8
  store i64 0, i64* %5, align 8
  %7 = load %struct.in_conninfo*, %struct.in_conninfo** %2, align 8
  %8 = icmp ne %struct.in_conninfo* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i32 @KASSERT(i32 %9, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %11 = load i64, i64* %5, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %23

13:                                               ; preds = %1
  %14 = load i64, i64* %4, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %23

16:                                               ; preds = %13
  %17 = load i64, i64* %5, align 8
  %18 = load i64, i64* %4, align 8
  %19 = call i64 @min(i64 %17, i64 %18)
  %20 = load i64, i64* %6, align 8
  %21 = sub i64 %19, %20
  %22 = trunc i64 %21 to i32
  store i32 %22, i32* %3, align 4
  br label %37

23:                                               ; preds = %13, %1
  %24 = load i64, i64* %5, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %29, label %26

26:                                               ; preds = %23
  %27 = load i64, i64* %4, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %36

29:                                               ; preds = %26, %23
  %30 = load i64, i64* %5, align 8
  %31 = load i64, i64* %4, align 8
  %32 = call i64 @max(i64 %30, i64 %31)
  %33 = load i64, i64* %6, align 8
  %34 = sub i64 %32, %33
  %35 = trunc i64 %34 to i32
  store i32 %35, i32* %3, align 4
  br label %36

36:                                               ; preds = %29, %26
  br label %37

37:                                               ; preds = %36, %16
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i64 @min(i64, i64) #1

declare dso_local i64 @max(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
